# python-base

./: README.md  hello.py  pyproject.toml  tabuada.py
src/: escola.py  hello.py  produto.py  tabuada.py
